# elf_explorer

./: .gitignore  CMakeLists.txt  README.md
hellolib/: CMakeLists.txt  lib.cpp
helloworld/: CMakeLists.txt  helloworld.cpp
helloworld_asm/: build_assembler.sh
src/: CMakeLists.txt  ElfReader.cpp  ElfReader.hpp  Elf_Ehdr.hpp  Elf_Header_Fields.hpp  Elf_Phdr.cpp  Elf_Phdr.hpp  Elf_Program_Header_Fields.hpp  Elf_Section_Header_Fields.hpp  Elf_Shdr.cpp  Elf_Shdr.hpp  Elf_Sym.cpp  Elf_Sym.hpp  SectionTableInfo.cpp  SectionTableInfo.hpp  StringTable.cpp  StringTable.hpp  SymbolTable.cpp  SymbolTable.hpp  elf.cpp  elf.hpp  elf32.cpp  elf32.hpp  elf64.hpp  elf_common.hpp  machines.cpp  machines.hpp  main.cpp  osabi.hpp  section_attribute_flags.cpp  section_attribute_flags.hpp  section_types.cpp  section_types.hpp
text/: machines.txt  osabi.txt  report.txt  section_attribute_flags.txt  section_types.txt
tools/: write_constants.py  write_enums.py
